@@ -1,18 +1,19 @@
 package com.ventureverse.ventureverse_api.security;
 
 import lombok.RequiredArgsConstructor;
-import org.springframework.context.annotation.*;
+import org.springframework.context.annotation.Bean;
+import org.springframework.context.annotation.Configuration;
+import org.springframework.http.HttpMethod;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.http.SessionCreationPolicy;
-import org.springframework.security.crypto.bcrypt.*;
+import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
-import org.springframework.security.web.*;
+import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import java.util.Arrays;
 import java.util.List;
 
 @Configuration
@@ -29,48 +30,85 @@ public class SecurityConfig {
 
         @Bean
         public CorsConfigurationSource corsConfigurationSource() {
+
                 CorsConfiguration configuration = new CorsConfiguration();
-                configuration.setAllowedOrigins(List.of(
+
+                configuration.setAllowedOriginPatterns(List.of(
                                 "http://localhost:5173",
                                 "http://localhost:3000",
                                 "https://venture-verse-x.vercel.app"));
-                configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-                configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "X-Requested-With"));
-                configuration.setExposedHeaders(List.of("Content-Disposition"));
+
+                configuration.setAllowedMethods(List.of(
+                                "GET",
+                                "POST",
+                                "PUT",
+                                "DELETE",
+                                "PATCH",
+                                "OPTIONS"));
+
+                configuration.addAllowedHeader("*");
+
+                configuration.addExposedHeader("*");
+
                 configuration.setAllowCredentials(true);
 
                 UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+
                 source.registerCorsConfiguration("/**", configuration);
+
                 return source;
         }
 
         @Bean
-        public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
+        public SecurityFilterChain securityFilterChain(HttpSecurity http)
+                        throws Exception {
 
                 http
-                                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+                                .cors(cors -> cors.configurationSource(
+                                                corsConfigurationSource()))
                                 .csrf(csrf -> csrf.disable())
                                 .sessionManagement(session -> session
-                                                .sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+                                                .sessionCreationPolicy(
+                                                                SessionCreationPolicy.STATELESS))
+
                                 .authorizeHttpRequests(auth -> auth
+                                                .requestMatchers(
+                                                                org.springframework.http.HttpMethod.OPTIONS,
+                                                                "/**")
+                                                .permitAll()
+
+                                                .requestMatchers(
+                                                                HttpMethod.OPTIONS,
+                                                                "/**")
+                                                .permitAll()
+
                                                 .requestMatchers(
                                                                 "/api/v1/auth/**",
                                                                 "/api/v1/users/**",
                                                                 "/api/v1/reports/export/**",
                                                                 "/api/v1/search/**",
-                                                                "/oauth2/**",
                                                                 "/api/v1/knowledge/**",
-                                                                "/api/v1/search/**",
+                                                                "/oauth2/**",
                                                                 "/login/oauth2/**")
                                                 .permitAll()
-                                                .anyRequest().authenticated())
+
+                                                .anyRequest()
+                                                .authenticated())
+
                                 .oauth2Login(oauth2 -> oauth2
-                                                .successHandler(oAuth2AuthenticationSuccessHandler)
-                                                .failureHandler((request, response, exception) -> {
+                                                .successHandler(
+                                                                oAuth2AuthenticationSuccessHandler)
+                                                .failureHandler((request,
+                                                                response,
+                                                                exception) -> {
+
                                                         response.sendRedirect(
                                                                         "https://venture-verse-x.vercel.app/login?error=google_auth_failed");
                                                 }))
-                                .addFilterBefore(jwtFilter, UsernamePasswordAuthenticationFilter.class);
+
+                                .addFilterBefore(
+                                                jwtFilter,
+                                                UsernamePasswordAuthenticationFilter.class);
 
                 return http.build();
         }
